test/main/clean/__snapshots__/multiple-failures.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls console.error 1`] = `
Array [
  Array [
    "[FAILURE] Failed to clean",
  ],
  Array [
    "MultipleFailures",
  ],
  Array [
    "    TextParsingFailure",
  ],
  Array [
    "        YAML Parser",
  ],
  Array [
    "            YAMLException: incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line in \\"wdir/text-parsing-failure/foo.schema.autogen.yaml\\" at line 1, column 16:",
  ],
  Array [
    "                neither : json : nor : yaml",
  ],
  Array [
    "                               ^",
  ],
  Array [
    "    TextParsingFailure",
  ],
  Array [
    "        JSON Parser",
  ],
  Array [
    "            SyntaxError: Unexpected token e in JSON at position 1",
  ],
  Array [
    "    TextParsingFailure",
  ],
  Array [
    "        YAML Parser",
  ],
  Array [
    "            YAMLException: incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line in \\"wdir/text-parsing-failure/baz.schema.autogen.yaml\\" at line 1, column 16:",
  ],
  Array [
    "                neither : yaml : nor : json",
  ],
  Array [
    "                               ^",
  ],
  Array [
    "    CircularReference",
  ],
  Array [
    "        wdir/circular-reference/foo.schema.autogen.json",
  ],
  Array [
    "        wdir/circular-reference/foo.schema.autogen.yaml",
  ],
  Array [
    "    CircularReference",
  ],
  Array [
    "        wdir/circular-reference/foo.schema.autogen.yaml",
  ],
  Array [
    "        wdir/circular-reference/foo.schema.autogen.json",
  ],
  Array [
    "    CircularReference",
  ],
  Array [
    "        wdir/circular-reference/bar.schema.autogen.json",
  ],
  Array [
    "        wdir/circular-reference/bar.schema.autogen.yaml",
  ],
  Array [
    "    CircularReference",
  ],
  Array [
    "        wdir/circular-reference/bar.schema.autogen.yaml",
  ],
  Array [
    "        wdir/circular-reference/bar.schema.autogen.json",
  ],
  Array [
    "    CircularReference",
  ],
  Array [
    "        wdir/circular-reference/baz.schema.autogen.json",
  ],
  Array [
    "        wdir/circular-reference/foo.schema.autogen.json",
  ],
  Array [
    "        wdir/circular-reference/foo.schema.autogen.yaml",
  ],
]
`;

exports[`messages 1`] = `
"
[FAILURE] Failed to clean
MultipleFailures
    TextParsingFailure
        YAML Parser
            YAMLException: incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line in \\"wdir/text-parsing-failure/foo.schema.autogen.yaml\\" at line 1, column 16:
                neither : json : nor : yaml
                               ^
    TextParsingFailure
        JSON Parser
            SyntaxError: Unexpected token e in JSON at position 1
    TextParsingFailure
        YAML Parser
            YAMLException: incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line in \\"wdir/text-parsing-failure/baz.schema.autogen.yaml\\" at line 1, column 16:
                neither : yaml : nor : json
                               ^
    CircularReference
        wdir/circular-reference/foo.schema.autogen.json
        wdir/circular-reference/foo.schema.autogen.yaml
    CircularReference
        wdir/circular-reference/foo.schema.autogen.yaml
        wdir/circular-reference/foo.schema.autogen.json
    CircularReference
        wdir/circular-reference/bar.schema.autogen.json
        wdir/circular-reference/bar.schema.autogen.yaml
    CircularReference
        wdir/circular-reference/bar.schema.autogen.yaml
        wdir/circular-reference/bar.schema.autogen.json
    CircularReference
        wdir/circular-reference/baz.schema.autogen.json
        wdir/circular-reference/foo.schema.autogen.json
        wdir/circular-reference/foo.schema.autogen.yaml
"
`;
